--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,11 @@
+
 .body{
  font-family: "Open sans",sans-serif;
  font-size: 16px;
  font-weight: 400;
  font-style: normal;
  line-height: 1.375;    
+ width: 100%;
 }
 
 .header{
@@ -13,7 +15,7 @@
     width: 100%;
     height: 147px;
     background-color: rgba(222, 222, 222, 0.50);
-    
+    z-index: 100;
 }
 
 .header::before{
@@ -25,30 +27,31 @@
     height: 100%;
     backdrop-filter: blur(10px);
 }
-.header__container{
+.header__container,.events__container{
     box-sizing: border-box;
     position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin: 0 auto;
     padding-left: 40px;
     padding-right: 40px;
-    max-width: 1414px;
+    max-width: 1920px;
     width: 100%;
-
 }
 
 .header__logo{
     display: inline-block;
     width: 202px;
     height: 147px;
-    margin-right: 237px;
 }
 .header__logo-img{
     width: 100%;
     height: 100%;
 }
 .header__nav{
-    display: inline-block;
-    margin-right: 230px; 
+    display: flex;
+    justify-content: space-evenly;
 }
 .header__nav-link{
     margin: 0 25px;
@@ -71,6 +74,13 @@
     color: #1f1e1e ;
 }
 
+.header__sign_in-box{
+    display: flex;
+    justify-items: flex-end;
+    align-items: center;
+    width: 202px;
+
+}
 
 .home{
     padding-top: 147px;
@@ -123,5 +133,116 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+
+
+
+
+/*второй файл*/
+.events{
+    padding-top: 147px;
+}
+.events__container{
+    flex-direction: column;
+}
+.events__title{
+    align-self: center;
+}
+
+
+
+.title{
+    margin: 0 0 150px;
+    box-sizing: border-box;
+    padding: 7px 45px 9px;
+    max-width: 624px;
+    text-align: center;
+    background-color: #1f1e1e;
+    text-transform: uppercase;
+    font-family: Lora;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 500;
+    color: #fff;
+}
+
+.listing{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 120px 60px
+}
+.listing__card-event{
+    max-width: 405px;
+    width: calc(33.333% - 40px);
+}
+.card-event{
+    box-sizing: border-box;
+}
+
+.card-event__link{
+    text-decoration: none;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.card-event__link:hover .card-event__title{
+    color: #A51505;
+    text-decoration-color: #A51505; 
+    
+}
+.card-event__picture{
+    position: relative;
+    display: block;
+    margin-bottom: 25px;
+}
+
+.card-event__picture::before{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 107.160%;
+
+}
+.card-event__picture-img{
+    position: absolute;
+    top: 0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card-event__title{
+    margin: 0 0 auto;
+    min-height: 64px;
+    text-decoration: underline;
+    text-decoration-color: transparent;
+    font-family: "Open Sans";
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    color: #1f1e1e;
+    transition: color 0.2s, text-decoration-color 0.23s;
+
+}
+.card-event__text{
+    margin: 15px 0;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: normal;
+    color: #1f1e1e;
+}
+
+.card-event__time{
+    margin-top: auto;
+    display: block;
+    color: #1F1E1E;
+    font-family: 'Open Sans';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+
 }
 .footer{}
